force-app/main/default/objects/Project_Version__c/Project_Version__c.object-meta.xml
<CustomObject>
    <label>Project Version</label>
    <nameField>
        <label>Project Version</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>