force-app/main/default/objects/Project_Version__c/fields/Billing__c.field-meta.xml
<CustomField>
    <fullName>Billing__c</fullName>
    <label>Billing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>T&amp;M</fullName>
                <default>true</default>
                <label>T&amp;M</label>
            </value>
            <value>
                <fullName>Fixed Cost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>