force-app/main/default/objects/Project_Version__c/fields/CAPEX_Number__c.field-meta.xml
<CustomField>
    <fullName>CAPEX_Number__c</fullName>
    <label>CAPEX Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>