force-app/main/default/objects/Project_Version__c/fields/Capital__c.field-meta.xml
<CustomField>
    <fullName>Capital__c</fullName>
    <formula>IF ( ISPICKVAL( Funding_Type__c , &quot;Capital&quot;), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capital</label>
    <type>Checkbox</type>
</CustomField>