force-app/main/default/objects/Project_Version__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Software Upgrades</fullName>
            </value>
            <value>
                <fullName>Digital Transformation</fullName>
            </value>
            <value>
                <fullName>Network Infrastructure</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>