force-app/main/default/objects/Project_Version__c/fields/Cloned_From__c.field-meta.xml
<CustomField>
    <fullName>Cloned_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cloned From</label>
    <referenceTo>Project_Version__c</referenceTo>
    <relationshipLabel>Cloned Versions</relationshipLabel>
    <relationshipName>Cloned_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>