force-app/main/default/objects/Project_Version__c/fields/Delivery_Owner__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Project Versions (Delivery Owner)</relationshipLabel>
    <relationshipName>Projects_To_Deliver</relationshipName>
    <type>Lookup</type>
</CustomField>