force-app/main/default/objects/Project_Version__c/fields/Executive_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Executive_Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Executive Sponsor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projects Sponsored</relationshipLabel>
    <relationshipName>ProjectsSponsored</relationshipName>
    <type>Lookup</type>
</CustomField>