force-app/main/default/objects/Project_Version__c/fields/Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary__c</fullName>
    <formula>Project__r.Active_Version__c =  Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Primary</label>
    <type>Checkbox</type>
</CustomField>