force-app/main/default/objects/Project_Version__c/fields/Labour_Cost_Budget__c.field-meta.xml
<CustomField>
    <fullName>Labour_Cost_Budget__c</fullName>
    <label>Labour Cost Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>