force-app/main/default/objects/Project_Version__c/fields/Operational__c.field-meta.xml
<CustomField>
    <fullName>Operational__c</fullName>
    <formula>IF ( ISPICKVAL( Funding_Type__c , &quot;Operational&quot;), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Operational</label>
    <type>Checkbox</type>
</CustomField>