force-app/main/default/objects/Project_Version__c/fields/Planned_Spend__c.field-meta.xml
<CustomField>
    <fullName>Planned_Spend__c</fullName>
    <label>Planned Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>