force-app/main/default/objects/Project_Version__c/fields/Project_Initiation_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Initiation_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Project Initiation Date</label>
    <type>Date</type>
</CustomField>