force-app/main/default/objects/Project_Version__c/fields/Project_Progress__c.field-meta.xml
<CustomField>
    <fullName>Project_Progress__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Project Progress</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>