force-app/main/default/objects/Project_Version__c/fields/Project_Request__c.field-meta.xml
<CustomField>
    <fullName>Project_Request__c</fullName>
    <label>Project Request</label>
    <length>200</length>
    <type>Text</type>
</CustomField>