force-app/main/default/objects/Project_Version__c/fields/Proposed_Start__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Start__c</fullName>
    <label>Proposed Start</label>
    <required>true</required>
    <type>Date</type>
</CustomField>