force-app/main/default/objects/Project_Version__c/fields/Release_Qtr_and_Year__c.field-meta.xml
<CustomField>
    <fullName>Release_Qtr_and_Year__c</fullName>
    <formula>IF( ISBLANK(Release_Date__c) , &apos;&apos;, &apos;Q&apos;+TEXT(Ceiling(Month(Release_Date__c) / 3 ))+ &apos;-&apos;+ TEXT(YEAR(Release_Date__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Release Qtr</label>
    <type>Text</type>
</CustomField>