force-app/main/default/objects/Project_Version__c/fields/Required_Gates__c.field-meta.xml
<CustomField>
    <fullName>Required_Gates__c</fullName>
    <label>Required Gates</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Gates</valueSetName>
    </valueSet>
</CustomField>