force-app/main/default/objects/Project_Version__c/fields/Resource_Cost_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Resource_Cost_Allocation__c</fullName>
    <label>Resource Cost Allocation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>