force-app/main/default/objects/Project_Version__c/fields/Return_on_Investment__c.field-meta.xml
<CustomField>
    <fullName>Return_on_Investment__c</fullName>
    <label>Return on Investment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>