force-app/main/default/objects/Project_Version__c/fields/Targeted_Release__c.field-meta.xml
<CustomField>
    <fullName>Targeted_Release__c</fullName>
    <label>Targeted Release</label>
    <type>Date</type>
</CustomField>