force-app/main/default/objects/Project_Version__c/fields/Total_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Total_Forecast__c</fullName>
    <label>Total Forecast</label>
    <summarizedField>Forecast__c.Total__c</summarizedField>
    <summaryForeignKey>Forecast__c.Project_Version__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>