force-app/main/default/objects/Project_Version__c/fields/Total_Material_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Material_Cost__c</fullName>
    <label>Total Material Cost</label>
    <summarizedField>Aggregator__c.Material_Cost__c</summarizedField>
    <summaryForeignKey>Aggregator__c.Project_Version__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>