force-app/main/default/objects/Project_Version__c/fields/Total_Material_Engaged_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Material_Engaged_Cost__c</fullName>
    <label>Total Material Engaged Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>