force-app/main/default/objects/Project_Version__c/fields/Total_Resource_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Resource_Cost__c</fullName>
    <label>Total Resource Cost</label>
    <summarizedField>Resource_Engagement__c.Engagement_Cost__c</summarizedField>
    <summaryForeignKey>Resource_Engagement__c.Project_Version__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>